# pandora

./: .clang-format  .gitignore  CMakeLists.txt
cmake/shared/: FetchExternalDependencies.cmake  TargetPlatforms.cmake
scripts/: build.bat  build_and_run.bat  build_web.bat  dev.bat  setup_emscripten.bat  setup_emscripten.sh
src/: pandora.cpp  pandora.hpp
src/core/: color.cpp  color.hpp  debug_trap.hpp  interpolation.hpp  log.cpp  log.hpp  random.cpp  random.hpp  result.hpp  serialization.cpp  serialization.hpp  signal.hpp  smart_ptr.hpp
src/debug_visualization/: model_visualization.cpp  model_visualization.hpp
src/emscripten/: shell_minimal.html
src/imgui/: idebugui.hpp  imgui.hpp  imgui_config.hpp  imgui_extensions.hpp  imgui_system.cpp  imgui_system.hpp
src/imgui/fonts/: exo2_regular_data.hpp  exo2_semi_bold_data.hpp  icons_font_awesome_data.hpp  supplymono_regular_data.hpp  supplymono_semibold_data.hpp  ubuntu_mono_data.hpp
src/imgui/text_editor/: text_editor.cpp  text_editor.hpp
src/input/: input_system.cpp  input_system.hpp
src/input/private/: input_system_impl.hpp
src/input/private/native/: input_system_native.cpp  input_system_native.hpp
src/input/private/web/: input_system_web.cpp  input_system_web.hpp
src/physics/: collision_shape.cpp  collision_shape.hpp  physics_visualization.cpp  physics_visualization.hpp
src/physics/internal/: bullet_debug_render.cpp  bullet_debug_render.hpp
src/render/: color_space.hpp  color_texture.cpp  color_texture.hpp  debug_render.cpp  debug_render.hpp  debug_render_demo.cpp  debug_render_demo.hpp  depth_texture.cpp  depth_texture.hpp  instance_parameter_buffer.cpp  instance_parameter_buffer.hpp  material.cpp  material.hpp  mip_level_generator.cpp  mip_level_generator.hpp  rendersystem.cpp  rendersystem.hpp  shader_compilation_error.hpp  shader_compilation_result.cpp  shader_compilation_result.hpp  shader_compiler.cpp  shader_compiler.hpp  shader_editor.cpp  shader_editor.hpp  shader_preprocessor.cpp  shader_preprocessor.hpp  vertex_buffer_schemas.cpp  vertex_buffer_schemas.hpp  vertex_types.hpp  window.cpp  window.hpp  window_settings.hpp
src/render/lighting/: lighting_system.cpp  lighting_system.hpp
src/render/private/: debug_render_impl.cpp  debug_render_impl.hpp
src/render/render_pass/: base_render_pass.cpp  base_render_pass.hpp  render_pass.hpp  ui_render_pass.cpp  ui_render_pass.hpp
src/resources/: resource.cpp  resource.fwd.hpp  resource.hpp  resource_data_store.cpp  resource_data_store.hpp  resource_font.cpp  resource_font.hpp  resource_model.cpp  resource_model.hpp  resource_shader.cpp  resource_shader.hpp  resource_system.cpp  resource_system.hpp  resource_texture_2d.cpp  resource_texture_2d.hpp
src/scene/: camera.cpp  camera.hpp  entity.cpp  entity.hpp  scene.cpp  scene.hpp
src/scene/components/: ambient_light_component.hpp  camera_component.hpp  collision_component.cpp  collision_component.hpp  component_factory.hpp  debug_render_component.hpp  directional_light_component.cpp  directional_light_component.hpp  entity_reference_component.hpp  ghost_component.cpp  ghost_component.hpp  icomponent.hpp  landscape_component.hpp  model_component.hpp  orbit_camera_component.hpp  rigid_body_component.cpp  rigid_body_component.hpp  transform_component.hpp
src/scene/state_machine/: state.hpp  state_machine.hpp
src/scene/systems/: landscape_render_system.cpp  landscape_render_system.hpp  landscape_system.cpp  landscape_system.hpp  model_render_system.cpp  model_render_system.hpp  physics_simulation_system.cpp  physics_simulation_system.hpp  system.hpp
src/vfs/: file.cpp  file.hpp  vfs.cpp  vfs.hpp
src/vfs/private/: vfs_impl.hpp
src/vfs/private/native/: vfs_native.cpp  vfs_native.hpp
src/vfs/private/web/: manifest.cpp  manifest.hpp  manifest_entry.cpp  manifest_entry.hpp  vfs_web.cpp  vfs_web.hpp
tools/forge-cloudflare-worker/: README.md  package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc
tools/forge-cloudflare-worker/src/: index.ts
tools/forge/src/: forge.go  go.mod  go.sum
tools/forge/src/cmd/: inject.go  manifest.go  package.go  serve.go  upload.go
tools/forge/src/manifest/: generator.go
tools/forge/src/server/: server.go
tools/forge/src/upload/: uploader.go
tools/scripts/: setup_emscripten.bat  setup_emscripten.sh
